--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "p-min-delay": "^4.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-chartjs-2": "^5.0.1",
