--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-simple-maps": "^3.0.0",
     "react-slider": "^2.0.4",
     "react-sparklines": "^1.7.0",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-time-picker": "^5.1.0",
     "react-toastify": "^9.1.3",
