--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
+    "react-bootstrap-range-slider": "^3.0.8",
     "react-chartjs-2": "^5.0.1",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
