--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.1.3",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
