--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-range-slider": "^3.0.8",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.1.2",
@@ -30,7 +34,8 @@
     "react-toastify": "^10.0.5",
     "sweet-alert": "^2.0.5",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.11.0",
+    "sweetalert2": "^11.12.3",
+    "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
