--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-avatar": "^5.0.3",
