--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next/swc-linux-x64-gnu": "^15.0.0-rc.1",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "babel-plugin-macros": "^3.1.0",
